Fix video alignment

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ p {font-size:18px}
     margin-left: 60px;
     width: calc(100% - 120px);
     background: white;
+    overflow: hidden;
 }
 #videoFrame{
     width: 70%;
